# cc-talk-docs

./: .dockerignore  .gitignore  .mcp.json  Cargo.toml  Dockerfile  README.md  database.db  justfile
.github/workflows/: publish-docker.yml
api/: Cargo.toml
api/src/: document.rs  error.rs  http.rs  lib.rs  main.rs  mcp.rs  query.rs
common/: Cargo.toml  schema.sql
common/src/: chunk.rs  database.rs  embed.rs  lib.rs  pdf.rs
database-seeder/: Cargo.toml
database-seeder/src/: chunk_cc_talk.rs  lib.rs  main.rs
dev/: bruno-cc-talk-docs.yml  get-pages.request  search-docs.request
