[package]
name = "common"
version = "0.1.0"
edition.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
sqlite-vec.workspace = true
rusqlite.workspace = true

fastembed.workspace = true
pdfium-render.workspace = true
regex.workspace = true
text-splitter.workspace = true
tokenizers.workspace = true

[lints]
workspace = true
