[package]
name = "database-seeder"
version = "0.1.0"
edition.workspace = true

[dependencies]
common.workspace = true

thiserror.workspace = true
anyhow.workspace = true
rusqlite.workspace = true

fastembed.workspace = true
pdfium-render.workspace = true
regex.workspace = true
text-splitter.workspace = true
tokenizers.workspace = true

[lints]
workspace = true
